--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,40 @@
 /.idea/runConfigurations.xml
 /book-store-api/workshop.log
 /workshop.log
+/bookdb.lock.db
+/bookdb.mv.db
+/bookdb.trace.db
+/.idea/libraries/Maven__antlr_antlr_2_7_7.xml
+/.idea/libraries/Maven__com_h2database_h2_1_4_200.xml
+/.idea/libraries/Maven__com_sun_activation_jakarta_activation_1_2_2.xml
+/.idea/libraries/Maven__com_sun_istack_istack_commons_runtime_3_0_12.xml
+/.idea/libraries/Maven__com_zaxxer_HikariCP_4_0_3.xml
+/.idea/libraries/Maven__io_springfox_springfox_bean_validators_3_0_0.xml
+/.idea/libraries/Maven__io_springfox_springfox_boot_starter_3_0_0.xml
+/.idea/libraries/Maven__io_springfox_springfox_data_rest_3_0_0.xml
+/.idea/libraries/Maven__io_springfox_springfox_oas_3_0_0.xml
+/.idea/libraries/Maven__io_swagger_core_v3_swagger_models_2_1_2.xml
+/.idea/libraries/Maven__jakarta_persistence_jakarta_persistence_api_2_2_3.xml
+/.idea/libraries/Maven__jakarta_transaction_jakarta_transaction_api_1_3_3.xml
+/.idea/libraries/Maven__javax_activation_javax_activation_api_1_2_0.xml
+/.idea/libraries/Maven__javax_xml_bind_jaxb_api_2_3_1.xml
+/.idea/libraries/Maven__org_aspectj_aspectjweaver_1_9_7.xml
+/.idea/libraries/Maven__org_dom4j_dom4j_2_1_3.xml
+/.idea/libraries/Maven__org_glassfish_jaxb_jaxb_runtime_2_3_5.xml
+/.idea/libraries/Maven__org_glassfish_jaxb_txw2_2_3_5.xml
+/.idea/libraries/Maven__org_hibernate_common_hibernate_commons_annotations_5_1_2_Final.xml
+/.idea/libraries/Maven__org_hibernate_hibernate_core_5_4_32_Final.xml
+/.idea/libraries/Maven__org_javassist_javassist_3_27_0_GA.xml
+/.idea/libraries/Maven__org_jboss_jandex_2_2_3_Final.xml
+/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_4_2_Final.xml
+/.idea/libraries/Maven__org_liquibase_liquibase_core_4_3_5.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_configuration_processor_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_aop_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_data_jpa_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_jdbc_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_data_spring_data_commons_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_data_spring_data_jpa_2_5_4.xml
+/.idea/libraries/Maven__org_springframework_spring_aspects_5_3_9.xml
+/.idea/libraries/Maven__org_springframework_spring_jdbc_5_3_9.xml
+/.idea/libraries/Maven__org_springframework_spring_orm_5_3_9.xml
+/.idea/libraries/Maven__org_springframework_spring_tx_5_3_9.xml
