--- a/book-store-api/pom.xml
+++ b/book-store-api/pom.xml
@@ -85,6 +85,20 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <!-- Security -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- Monitoring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
