--- a/book-store-api/src/main/resources/application.yml
+++ b/book-store-api/src/main/resources/application.yml
@@ -23,9 +23,15 @@ spring:
       enabled: true
       path: /h2-console
 
+  security:
+    user:
+      name: api-user
+      password: afdd2275-58e0-4e6d-af26-54c6dddd4068
+
 logging:
   pattern:
-    console: "%d{HH:mm:ss.SSS} [%X{user}] %highlight(%-5level) %highlight(%48.48logger) - %msg%n"
+    console: "%d{HH:mm:ss.SSS} %highlight(%-5level) %highlight(%48.48logger) - %msg%n"
   level:
-    "[org.hibernate.engine.jdbc.env.internal.JdbcEnvironmentInitiator]": debug
+    #"[org.hibernate.engine.jdbc.env.internal.JdbcEnvironmentInitiator]": debug
     "[org.springframework.web]": info
+    "[org.springframework.security]": info
